# tods-corso-python

./: .gitignore  README.md  pyproject.toml
corso_python_base/: 10.1_Esercizio_finale_riepilogativo_pokemon.ipynb  10.1_sol_Esercizio_finale_riepilogativo_pokemon.ipynb  10.2_Esercizio_finale_riepilogativo.ipynb  10.2_sol_Esercizio_finale_riepilogativo.ipynb  1_Modulo_setup_introduzione.ipynb  2_Modulo_Fondamenti_di_Python.ipynb  2_sol_Modulo_Fondamenti_di_Python.ipynb  3_Modulo_Strutture_di_Controllo.ipynb  3_sol_Modulo_Strutture_di_Controllo.ipynb  4_Modulo_Strutture_Dati.ipynb  4_sol_Modulo_Strutture_Dati.ipynb  5_Modulo_Funzioni.ipynb  5_sol_Modulo_Funzioni.ipynb  6_Modulo_File_ed_Eccezioni.ipynb  6_sol_Modulo_File_ed_Eccezioni.ipynb  7_Modulo_Moduli_e_Pacchetti.ipynb  7_sol_Modulo_Moduli_e_Pacchetti.ipynb  8_Modulo_Programmazione_ad_Oggetti.ipynb  8_impiccato.py  8_sol_Modulo_Programmazione_ad_Oggetti.ipynb  9_Modulo_Strumenti_Avanzati.ipynb  9_sol_Modulo_Strumenti_Avanzati.ipynb  hello.py  hello_age.py
datahouse/: README.md  pyproject.toml
datahouse/output/: report.json
datahouse/src/: analysis.py  main.py  models.py  utils_io.py  viz.py
pokemon_battle_arena/: README.md  main.py
pokemon_battle_arena/data/: pokedex.json
pokemon_battle_arena/src/: battle.py  pokemon.py  team.py  utils.py
