[project]
name = "datahouse"
version = "0.1.0"
description = "Esercizio finale riepilogativo"
authors = [
    {name = "Eduardo Buono"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "seaborn (==0.13.0)",
    "requests (>=2.31.0,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
